--- a/src/app/sections/contacto/contacto.component.html
+++ b/src/app/sections/contacto/contacto.component.html
@@ -2,7 +2,7 @@
   <section id="contacto" class="flex justify-center items-start min-h-screen bg-transparent px-4 pt-20">
     <div class="bg-white bg-opacity-80 rounded-lg shadow-lg p-8 w-full sm:w-11/12 md:w-3/4 lg:w-2/3 xl:w-1/2 mx-auto">
       <h2 class="text-3xl font-bold text-center mb-6">Contacto</h2>
-      <form (submit)="enviarFormulario()" class="space-y-4">
+      <form (submit)="enviarFormulario($event)" class="space-y-4">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700">Correo electrónico</label>
           <input id="email" type="email" class="input input-bordered w-full" placeholder="Escribe tu correo" required>
